<resources>
    <string name="app_name" translatable="false">Vector Pinball Horizon</string>
    <string name="independent_flippers_pref_title">Independent flippers</string>
    <string name="independent_flippers_pref_summary_on">A touch activates the flippers on the same side of the screen</string>
    <string name="independent_flippers_pref_summary_off">Any touch activates all flippers</string>
    <string name="analog_triggers_pref_title">Analog triggers</string>
    <string name="analog_triggers_pref_summary_on">Trigger pull controls flipper angle</string>
    <string name="analog_triggers_pref_summary_off">Triggers act as digital buttons</string>
    <string name="line_width_pref_title">Line width</string>
    <string name="line_width_pref_dialog_message">Enter the line width in pixels, or 0 to use a default width based on the screen resolution.</string>
    <string name="sound_pref_title">Sound</string>
    <string name="music_pref_title">Background music</string>
    <string name="haptic_feedback_pref_title">Haptic feedback</string>
    <string name="show_fps_pref_title">Show FPS</string>
    <string name="zoom_pref_title">Zoom playfield</string>
    <string name="ball_trails_pref_title">Ball trails</string>
    <string name="score_animations_pref_title">Score animations</string>
    <string name="use_opengl_pref_title">OpenGL rendering</string>
    <string name="game_speed_pref_title">Game speed</string>
    <string-array name="game_speed_pref_entries">
        <item>Slow</item>
        <item>Normal</item>
        <item>Fast</item>
    </string-array>
    <string-array name="game_speed_pref_values" translatable="false">
        <item>slow</item>
        <item>normal</item>
        <item>fast</item>
    </string-array>
    <string name="about_text">Vector Pinball Horizon 1.15.2\nbased on Vector Pinball\n© 2010–2026 Brian Nenninger\n\nTouch the screen to start a new game, launch a ball if one is not in play, and activate the flippers. Touch the score area to pause the game.\n\n[TABLE_RULES]\n\nThe Preferences menu item allows you to change the following settings:\n- Sound: Enables and disables sound effects.\n- Background Music: Enables and disabled background music.\n- Haptic Feedback: Vibrates on bumper hits and other game events.\n- Independent Flippers: When unchecked, any touch activates both flippers. When checked, you must touch the left side of the screen for the left flipper, and the right side for the right flipper.\n- Zoom: When checked, the view will zoom in on the ball\'s location during play.\n- OpenGL Rendering: Uses OpenGL to draw graphics. This usually provides the best combination of graphics quality and performance, but some devices may do better with it disabled.\n- Show FPS: When checked, shows frames drawn per second in the upper left.\n\nVector Pinball Horizon is open source; the code is at\nhttps://github.com/vogtmh/Vector-Pinball-Horizon\n\nThanks to Mario Zechner for code improvements and libgdx.\n\nTable 8 design and code by Jack Morgan (jackmorgan8@gmail.com)\n\nsound, music, &amp; audio code, by pdx\nTwittering Machine\nhttps://www.twittering.com</string>
    <string name="table1_rules">Table Rules:\n- Light all the cyan rollovers in the top or bottom lanes to advance the score multiplier. All points you earn will be multiplied by this amount. Shooting the left ramp will also advance the multiplier.\n- The game starts with ball savers in the left and right outlanes, which disappear when used. Hit all drop targets on the left or right side to restore them.\n- Hitting any group of drop targets will activate the next light in the center of the field. When the large white central light is activated, shoot the left ramp to start multiball.</string>
    <string name="table2_rules">Table Rules:\n- Light all the cyan rollovers in the bottom lanes to advance the score multiplier. All points you earn will be multiplied by this amount. \n- The game starts with ball savers in the left and right outlanes, which disappear when used. Hit all drop targets on the left or right side to restore them.\n- The circles in the middle of the field keep track of how many times you\'ve hit all the left, upper, and right drop targets. When all of them have been hit at least 3 times, shoot the red bumper in the upper right to start multiball.</string>
    <string name="table3_rules">Table Rules:\n- Light all the cyan rollovers in the bottom lanes to advance the score multiplier. All points you earn will be multiplied by this amount. \n- The game starts with ball savers in the left and right outlanes, which disappear when used. Hit all drop targets on the left or right side to restore them.\n- Shooting either ramp will turn the bumpers red, and they will change back to blue over several seconds. Hit them during this time for extra points.\n- Turn the middle rings red by hitting the bumpers, and the middle sets of drop targets. When all the rings are red, shoot either ramp to start multiball.</string>
    <string name="table4_rules">Table Rules:\n- Each bumper increases the score multiplier by 0.01x. Shooting the top drop targets or lighting all the lane rollovers will increase this amount.\n- Shoot all six bumpers to light the center indicators. When all indicators for a row are lit, shoot the right hole to lock the ball for multiball.\n- Multiball starts when you lock three balls. During multiball, the center indicators will light up when a ball crosses over them. Light them all to score a jackpot.\n- The game starts with ball savers in the left and right outlanes, which disappear when used. Hit all drop targets on the left or right side to restore them.</string>
    <string name="table5_rules">Table Rules:\n- The central circle has twelve points around it, 3 each of 4 colors. Shooting a top ramp will change the color of the ball and allow it to activate the points with matching color.\n- When all 12 points around the circle are activated, hitting the edges of the rotating triangle will remove them. Shoot the target in the middle of the triangle to start multiball.\n- During multiball, light the 12 circle points again to score a jackpot, which increases in value each time.\n- The game starts with ball savers in the left and right outlanes, which disappear when used. Hit all drop targets on the left or right side to restore them.</string>
    <string name="table6_rules">Table Rules:\n- In the center of the table, five planets orbit a sun. When the ball rolls over one of the planets, it changes to the planet\'s color and the planet starts flashing.\n- Shoot the corresponding target to &quot;activate&quot; the planet and make it solid. For the inner orange planet, hit the targets in the upper left. For the second blue planet, activate the rollovers in the upper right. For the remaining planets, shoot the ramp of the matching color.\n- Activate all five planets to start multiball. In multiball, activate all the planets again for a jackpot.\n- The game starts with ball savers in the left and right outlanes, which disappear when used. Hit all drop targets on the left or right side to restore them.\n- The sun and planets have gravity and will attract balls when they get close.</string>
    <string name="table7_rules">Table Rules:\n- The center of the table contains a star map. Shoot one of the ramps with the flashing green arrows to cause the map to move to a constellation.\n- The stars that make up the constellation will appear in green. Roll the ball over them to activate them; they will turn yellow and lines will connect activated stars to draw the constellation outline.\n- When the constellation outline is complete, shoot the right ramp with the flashing yellow arrow to lock the ball. Repeat this process with two more constellations. Locking the third ball will start multiball.\n- In multiball, complete the remaining constellations and then shoot the right ramp for a jackpot.\n- The game starts with ball savers in the left and right outlanes, which disappear when used. Hit all drop targets on the left or right side to restore them.</string>
    <string name="table8_rules">Table Rules:\n- The main objective of the game is to sink pool balls by shooting the right targets, then sink the 8-ball by hitting the upper right target.\n- Balls 1 through 7 will stay sunk from ball to ball unless the right target bank is completed. If the bank is completed but the 8-ball target is not hit, all targets will reset on the next ball.\n- Each pool ball adds 7,000 points to bonus. Each time balls 1 through 8 are sunk, a super bonus of 56,000 points will be added to your bonus at the end of each subsequent ball.\n- After sinking the 8-ball, a one-time bonus collect will be lit behind the 8-ball target.\n- Bonus multiplier can be increased up to 5x by shooting the left side inline targets. After completing all 4 targets, a 50,000 point red target becomes available behind the drop targets.\n- Completing the 4 rollover lanes will advance the value on the spinner (up to 1,500 per spin) and 8-ball target (up to 60,000 per shot).\n- Holding the left flipper up while launching the ball gives you one chance to shoot the 8-ball and collect the entire rack.</string>
    <string name="change_table_button_label">Select Table</string>
    <string name="help_button_label">Help</string>
    <string name="preferences_button_label">Preferences</string>
    <string name="start_game_button_label">Start Game</string>
    <string name="resume_game_button_label">Resume Game</string>
    <string name="end_game_button_label">End Game</string>
    <string name="quit_button_label">Quit</string>
    <string name="unlimited_balls_label">Unlimited Balls</string>
    <string name="ball_number_message">Ball %1$d</string>
    <string name="shoot_again_message">Shoot Again</string>
    <string name="ball_saved_message">Ball Saved</string>
    <string name="game_over_message">Game Over</string>
    <string name="bump_message">Bump!</string>
    <string name="touch_to_start_message">Touch to start</string>
    <string name="last_score_message">Last Score: %1$s</string>
    <string name="top_high_score_message">High Score: %1$s</string>
    <string name="other_high_score_message">#%1$d Score: %2$s</string>
    <string name="no_high_scores_message">No scores for this table</string>
    <string name="left_save_enabled_message">Left Save Enabled</string>
    <string name="right_save_enabled_message">Right Save Enabled</string>
    <string name="shoot_ramp_multiball_message">Shoot Ramp for Multiball</string>
    <string name="multiball_started_message">Multiball!</string>
    <string name="multiplier_message">%1$dx Multiplier</string>
    <string name="shoot_red_bumper_message">Shoot Red Bumper</string>
    <string name="bumper_multiplier_message">Bumper Multiplier %1$d%%"</string>
    <string name="jackpot_received_message">Jackpot!</string>
    <string name="jackpot_received_with_multipler_message">%1$dx Jackpot!</string>
    <string name="multiball_ready_message">Multiball Ready</string>
    <string name="ball_lock_ready_message">Ball Lock Ready</string>
    <string name="ball_locked_message">Ball %1$d Locked</string>
    <string name="shoot_pyramid_message">Shoot the Pyramid!</string>
    <string name="extra_ball_received_message">Extra Ball!</string>
    <string name="blue_ramp_bonus_message">Blue ramp +%1$d%%</string>
    <string name="red_ramp_bonus_message">Red ramp +%1$d%%</string>
    <string name="yellow_ramp_bonus_message">Yellow ramp +%1$d%%</string>
    <string name="green_ramp_bonus_message">Green ramp +%1$d%%</string>
    <string name="color_blue">Blue</string>
    <string name="color_red">Red</string>
    <string name="color_yellow">Yellow</string>
    <string name="color_green">Green</string>
    <string name="planet_activated_message">Planet %1$d Activated!</string>
    <string name="ramp_bonus_message">%1$dx Ramp</string>
</resources>