<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory android:title="Preferences">
	
		<com.dozingcatsoftware.bouncy.ColoredSwitchPreference android:key="sound" android:defaultValue="true" android:enabled="true"
		    android:title="@string/sound_pref_title" />
		
		<com.dozingcatsoftware.bouncy.ColoredSwitchPreference android:key="music" android:defaultValue="true" android:enabled="true"
		    android:title="@string/music_pref_title" />

		<com.dozingcatsoftware.bouncy.ColoredSwitchPreference android:key="haptic" android:defaultValue="true" android:enabled="true"
			android:title="@string/haptic_feedback_pref_title" />

		<com.dozingcatsoftware.bouncy.ColoredSwitchPreference android:key="independentFlippers" android:defaultValue="true" android:enabled="true"
		    android:title="@string/independent_flippers_pref_title" 
		    android:summaryOff="@string/independent_flippers_pref_summary_off"
		    android:summaryOn="@string/independent_flippers_pref_summary_on" />

		<com.dozingcatsoftware.bouncy.ColoredSwitchPreference android:key="analogTriggers" android:defaultValue="true" android:enabled="true"
		    android:title="@string/analog_triggers_pref_title"
		    android:summaryOff="@string/analog_triggers_pref_summary_off"
		    android:summaryOn="@string/analog_triggers_pref_summary_on" />
		<ListPreference
			android:key="gameSpeed"
			android:title="@string/game_speed_pref_title"
			android:entries="@array/game_speed_pref_entries"
			android:entryValues="@array/game_speed_pref_values"
			android:defaultValue="normal"
		/>

        <com.dozingcatsoftware.bouncy.ColoredSwitchPreference android:key="showBallTrails" android:defaultValue="true" android:enabled="true"
            android:title="@string/ball_trails_pref_title" />

        <com.dozingcatsoftware.bouncy.ColoredSwitchPreference android:key="showScoreAnimations" android:defaultValue="true" android:enabled="true"
            android:title="@string/score_animations_pref_title" />

        <com.dozingcatsoftware.bouncy.ColoredSwitchPreference android:key="useOpenGL" android:defaultValue="true" android:enabled="true"
		    android:title="@string/use_opengl_pref_title" />

		<EditTextPreference android:key="lineWidth" android:enabled="true"
			android:title="@string/line_width_pref_title"
			android:dialogMessage="@string/line_width_pref_dialog_message"
			android:inputType="number" />

		<com.dozingcatsoftware.bouncy.ColoredSwitchPreference android:key="showFPS" android:enabled="true"
		    android:title="@string/show_fps_pref_title" />
		
	</PreferenceCategory>
</PreferenceScreen>
